# KUI

./: .gitignore  README.md
HW1-A*/: README.md  agent.py  example_search.py  pyproject.toml
HW1-A*/kuimaze2/: __init__.py  keyboard.py  map.py  mdp.py  rendering.py  rl.py  search.py  typing.py
HW1-A*/test/: mdp_fixtures.py  test_map.py  test_mdp_problem.py  test_search_problem.py  test_state.py
HW2-Reversi/reversi_2023l/: README.txt  README_EN.txt  game_board.py  headless_reversi_creator.py  player.py  reversi_creator.py  reversi_view.py
HW2-Reversi/reversi_2023l/players/: alphabeta_player.py  base_player.py  greedy_player.py  greedy_player_og.py  heuristic.py  necasond_2019.py  player.py  random_player.py  speculate_player.py
HW2-Reversi/testing/: game_board.py  headless_reversi_creator.py  heuristic.py  player.py  player_base.py  player_board.py  player_pqueue.py  rng.py
HW3-MDPs/: example_mdp.py  mdp_agent.py
HW3-MDPs/kuimaze2/: keyboard.py  map.py  mdp.py  rendering.py  rl.py
HW3-MDPs/test/: test_rl_problem.py  test_search_problem.py
HW4-RL/: rl_agent.py  rl_agent_base.py  rl_agent_q_table.py
HW4-RL/kuimaze2/: mdp.py  typing.py
HW5-Recognition/: .gitignore  README.md  classificator_base.py  knn.py  naive_bayes.py
HW6-Classification/: analysis.ipynb  evaluation.py
HW6-Classification/report/: 01-parameter-selection.tex  02-top-secret.tex  03-securely.tex  Makefile  main.tex
kuimaze/: README.md  easy_example.py  mdp_sandbox.py  rl_sandbox.py
kuimaze/kuimaze/: __init__.py  baseagent.py  gym_wrapper.py  keyboard.py  maze.py  types.py
